feat: Enterprise SaaS UI redesign, Framer Motion animations, real-time AI mood engine, Raycast Cmd+K palette, Kubernetes manifests, and CI/CD workflows