@@ -12,7 +12,6 @@ import com.aijournal.auth.repository.RoleRepository;
 import com.aijournal.auth.repository.UserRepository;
 import com.aijournal.auth.service.AuthService;
 import com.aijournal.common.exception.BadRequestException;
-import com.aijournal.common.exception.ResourceNotFoundException;
 import com.aijournal.common.exception.UnauthorizedException;
 
 import io.jsonwebtoken.Jwts;
@@ -26,7 +25,6 @@ import javax.crypto.SecretKey;
 import java.nio.charset.StandardCharsets;
 import java.time.Instant;
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Service
 public class AuthServiceImpl implements AuthService {
@@ -45,7 +43,8 @@ public class AuthServiceImpl implements AuthService {
     @Value("${jwt.refresh-expiration-ms:604800000}") // 7 days default
     private long refreshExpirationMs;
 
-    public AuthServiceImpl(UserRepository userRepository, RoleRepository roleRepository, RefreshTokenRepository refreshTokenRepository, PasswordEncoder passwordEncoder) {
+    public AuthServiceImpl(UserRepository userRepository, RoleRepository roleRepository,
+            RefreshTokenRepository refreshTokenRepository, PasswordEncoder passwordEncoder) {
         this.userRepository = userRepository;
         this.roleRepository = roleRepository;
         this.refreshTokenRepository = refreshTokenRepository;
@@ -78,8 +77,7 @@ public class AuthServiceImpl implements AuthService {
                 true,
                 User.AuthProvider.LOCAL,
                 null,
-                roles
-        );
+                roles);
 
         User savedUser = userRepository.save(user);
         return generateTokensForUser(savedUser);
@@ -105,7 +103,7 @@ public class AuthServiceImpl implements AuthService {
         RefreshToken token = refreshTokenRepository.findByToken(request.getRefreshToken())
                 .orElseThrow(() -> new UnauthorizedException("Invalid refresh token"));
 
-        if (token.getRevoked() || token.getExpiryDate().isBefore(Instant.now())) {
+        if (Boolean.TRUE.equals(token.getRevoked()) || token.getExpiryDate().isBefore(Instant.now())) {
             refreshTokenRepository.delete(token);
             throw new UnauthorizedException("Refresh token was expired or revoked. Please login again");
         }
@@ -124,19 +122,19 @@ public class AuthServiceImpl implements AuthService {
     private AuthResponse generateTokensForUser(User user) {
         List<String> roleNames = user.getRoles().stream()
                 .map(r -> r.getName().name())
-                .collect(Collectors.toList());
+                .toList();
 
         SecretKey key = Keys.hmacShaKeyFor(jwtSecret.getBytes(StandardCharsets.UTF_8));
-        Date now = new Date();
-        Date expiryDate = new Date(now.getTime() + jwtExpirationMs);
+        Instant now = Instant.now();
+        Instant expiryDate = now.plusMillis(jwtExpirationMs);
 
         String accessToken = Jwts.builder()
                 .subject(user.getUsername())
                 .claim("userId", user.getId())
                 .claim("email", user.getEmail())
                 .claim("roles", roleNames)
-                .issuedAt(now)
-                .expiration(expiryDate)
+                .issuedAt(Date.from(now))
+                .expiration(Date.from(expiryDate))
                 .signWith(key)
                 .compact();
 
@@ -146,8 +144,7 @@ public class AuthServiceImpl implements AuthService {
                 refreshTokenValue,
                 user,
                 Instant.now().plusMillis(refreshExpirationMs),
-                false
-        );
+                false);
         refreshTokenRepository.save(refreshToken);
 
         return new AuthResponse(
@@ -156,7 +153,6 @@ public class AuthServiceImpl implements AuthService {
                 user.getId(),
                 user.getUsername(),
                 user.getEmail(),
-                roleNames
-        );
+                roleNames);
     }
 }
